# Grove-Parallel_AI_Dev

./: .gitignore  CLAUDE.md  pyproject.toml
tests/: conftest.py  test_branch.py  test_cli.py  test_experiment.py  test_git_ops.py  test_merge.py  test_worktree.py
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/core/: agent-orchestrator.ts  claude-md-generator.ts  config-manager.ts  gitignore.ts  merge-sequencer.ts  overlap-detector.ts  session-tracker.ts  template-manager.ts  worktree-manager.ts
vscode-extension/src/utils/: errors.ts  git.ts  logger.ts  package-manager.ts  terminal.ts
vscode-extension/templates/: code-review-team.json  debug-squad.json  full-stack-team.json  migration-team.json  rapid-prototype.json
vscode-extension/test/: runTest.ts
vscode-extension/test/suite/: claude-md-generator.test.ts  errors.test.ts  git.test.ts  gitignore.test.ts  index.ts  merge-sequencer.test.ts  overlap-detector.test.ts  session-tracker.test.ts  template-manager.test.ts  worktree-manager.test.ts
vscode-extension/webview-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
worktree_pilot/: __init__.py  __main__.py  cli.py  constants.py
worktree_pilot/core/: branch.py  experiment.py  git_ops.py  merge.py  worktree.py
worktree_pilot/ui/: colors.py  display.py  prompts.py
worktree_pilot/utils/: config.py  gitignore.py  validators.py
(+14 files in other folders)
